--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   equatable: ^2.0.3
   dio: ^4.0.4
   loader_overlay: ^2.0.7
+  http: ^0.13.4
+  adaptive_dialog: ^1.6.4
+  shared_preferences: ^2.0.15
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
