--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.0.2+1
   path_provider: ^2.0.11
   shimmer: ^2.0.0
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
