--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.11
   shimmer: ^2.0.0
   logger: ^1.1.0
+  connectivity_plus: ^2.3.5
 
 dev_dependencies:
   flutter_test:
