--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,15 @@ dependencies:
   fluttertoast: ^8.0.9
   animations: ^2.0.3
   top_snackbar_flutter: ^2.0.0
+  internet_connection_checker: ^0.0.1+4
+  auto_route: ^3.2.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  auto_route_generator: ^3.2.0              
+  build_runner:  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
