--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   internet_connection_checker: ^0.0.1+4
   auto_route: ^3.2.0
   cached_network_image: ^3.2.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
