--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,11 @@ dependencies:
   top_snackbar_flutter: ^2.0.0
   internet_connection_checker: ^0.0.1+4
   auto_route: ^3.2.0
-  cached_network_image: ^3.2.1
+  cached_network_image: ^3.2.1  
   carousel_slider: ^4.1.1
+  intl: ^0.17.0
+  flutter_secure_storage: ^5.0.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
