--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,13 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-         <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+     <uses-permission android:name="android.permission.BLUETOOTH" />  
+	   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
+	   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> 
+
     <application
          android:name="${applicationName}"
         android:label="shop_app"
@@ -46,5 +52,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCsSIphywBtRxRJwDB_UeNGSOoJ_8AnD4c"/>
     </application>
 </manifest>
