--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   maps_launcher: ^2.0.1
   app_settings: ^4.1.8
   contactus: ^1.2.0
+  pin_code_fields: ^7.4.0
+  flutter_timer_countdown: ^1.0.3
 
 dev_dependencies:
   flutter_test:
