--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   pin_code_fields: ^7.4.0
   flutter_timer_countdown: ^1.0.3
   responsive_framework: ^0.2.0
+  get_it: ^7.2.0
+  permission_handler: ^10.0.0
+  custom_info_window: ^1.0.1
 
 dev_dependencies:
   flutter_test:
