--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,8 +69,11 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
   flutter_email_sender: ^5.1.0
   firebase_auth: ^3.6.1
-  firebase_messaging: ^12.0.1
   firebase_core: ^1.20.0
+  flutterfire_cli: ^0.2.4
+  firebase_messaging: ^13.0.0
+  flutter_local_notifications: ^9.9.1
+  loading_animation_widget: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
