--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ dependencies:
   firebase_messaging: ^14.1.2
   flutter_local_notifications: ^9.9.1
   loading_animation_widget: ^1.2.0+3
+  flutter_gif: ^0.0.4
+  ars_progress_dialog: ^0.0.1 
+  stylish_dialog: ^1.0.1
 
 dev_dependencies:
   flutter_test:
