--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,10 +85,9 @@ dev_dependencies:
   build_runner:  
 
 flutter_icons:
+  image_path: "assets/images/appLogo.png"
   android: true
   ios: true
-  image_path_android: "assets/images/logo.png"
-  image_path_ios: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
