--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   stylish_dialog: ^1.0.1
   expansion_tile_card: ^2.0.0
   modal_bottom_sheet: ^2.1.2
+  firebase_remote_config: ^3.0.9
+  cloud_firestore: ^4.3.1
+  panara_dialogs: ^0.1.4
 
 dev_dependencies:
   flutter_test:
