--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,6 @@ dependencies:
   flutter_email_sender: ^5.1.0
   firebase_auth: ^4.1.4
   firebase_core: ^2.3.0
-  flutterfire_cli: ^0.2.4
   firebase_messaging: ^14.1.2
   flutter_local_notifications: ^9.9.1
   loading_animation_widget: ^1.2.0+3
@@ -82,6 +81,10 @@ dependencies:
   firebase_remote_config: ^3.0.9
   cloud_firestore: ^4.3.1
   panara_dialogs: ^0.1.4
+  search_page: ^2.3.0
+  location: ^4.4.0 
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
