--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+4
+version: 1.0.3+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -84,6 +84,7 @@ dependencies:
   location: ^4.4.0 
   geolocator: ^9.0.2
   geocoding: ^2.0.5
+  flutter_speed_dial: ^6.2.0
 
 dev_dependencies:
   flutter_test:
