--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
-        jcenter()
-        mavenCentral()  // Maven Central repository
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath 'com.google.gms:google-services:4.3.13'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -16,8 +15,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        mavenCentral()  // Maven Central repository
+        mavenCentral()
     }
 }
 
@@ -29,6 +27,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
